Resolve conflict (remove center align)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -53,8 +53,8 @@ html {
 } */
 
 html, body {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 body {
@@ -68,13 +68,12 @@ body {
 }
 
 .parent {
-    text-align: center;
-    width: 100vw;
-    height: 360px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+    width: 100vw;
+    height: 360px;
 }
 
 logo,
